force-app/main/default/objects/Account/fields/AllOCSCSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllOCSCSharePointFolderId__c</fullName>
    <label>AllOCSCSharePointFolderId</label>
    <type>TextArea</type>
</CustomField>