force-app/main/default/objects/Account/fields/AllOCSCSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllOCSCSharePointFolderURL__c</fullName>
    <label>AllOCSCSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>