force-app/main/default/objects/Account/fields/AllOCSGSSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllOCSGSSharePointFolderId__c</fullName>
    <label>AllOCSGSSharePointFolderId</label>
    <type>TextArea</type>
</CustomField>