force-app/main/default/objects/Account/fields/AllOCSGSSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllOCSGSSharePointFolderURL__c</fullName>
    <label>AllOCSGSSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>