force-app/main/default/objects/Account/fields/AllOCSICSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllOCSICSharePointFolderId__c</fullName>
    <label>AllOCSICSharePointFolderId</label>
    <type>TextArea</type>
</CustomField>