force-app/main/default/objects/Account/fields/AllOCSICSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllOCSICSharePointFolderURL__c</fullName>
    <label>AllOCSICSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>