force-app/main/default/objects/Account/fields/AllOCSSSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllOCSSSharePointFolderId__c</fullName>
    <label>AllOCSSSharePointFolderId</label>
    <type>TextArea</type>
</CustomField>