force-app/main/default/objects/Account/fields/AllOCSSSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllOCSSSharePointFolderURL__c</fullName>
    <label>AllOCSSSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>