force-app/main/default/objects/Account/fields/AllProjectSCSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSCSharePointFolderId__c</fullName>
    <label>AllProjectSCSharePointFolderId</label>
    <type>TextArea</type>
</CustomField>