force-app/main/default/objects/Account/fields/AllProjectSCSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSCSharePointFolderURL__c</fullName>
    <label>AllProjectSCSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>