force-app/main/default/objects/Account/fields/AllProjectSGSSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSGSSharePointFolderId__c</fullName>
    <label>AllProjectSGSSharePointFolderId</label>
    <type>TextArea</type>
</CustomField>