force-app/main/default/objects/Account/fields/AllProjectSGSSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSGSSharePointFolderURL__c</fullName>
    <label>AllProjectSGSSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>