force-app/main/default/objects/Account/fields/AllProjectSICSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSICSharePointFolderId__c</fullName>
    <label>AllProjectSICSharePointFolderId</label>
    <type>TextArea</type>
</CustomField>