force-app/main/default/objects/Account/fields/AllProjectSICSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSICSharePointFolderURL__c</fullName>
    <label>AllProjectSICSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>