force-app/main/default/objects/Account/fields/AllProjectSSSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSSSharePointFolderId__c</fullName>
    <label>AllProjectSSSharePointFolderId</label>
    <type>TextArea</type>
</CustomField>