force-app/main/default/objects/Account/fields/AllProjectSSSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSSSharePointFolderURL__c</fullName>
    <label>AllProjectSSSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>