force-app/main/default/objects/Account/fields/Annual_FFB_Production_mt__c.field-meta.xml
<CustomField>
    <fullName>Annual_FFB_Production_mt__c</fullName>
    <label>Annual FFB Production (mt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>