force-app/main/default/objects/Account/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Bill to Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>