force-app/main/default/objects/Account/fields/Billing_City_State_and_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_State_and_Country__c</fullName>
    <formula>IF(NOT(ISBLANK(BillingState)), BillingCity + &quot;, &quot; + BillingState + &quot;, &quot; + BillingCountry,BillingCity + &quot;, &quot; + BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City, State and Country</label>
    <type>Text</type>
</CustomField>