force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Headquarters</fullName>
            </value>
            <value>
                <fullName>Invoicing Office</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>