force-app/main/default/objects/Account/fields/Certified_Area_ha__c.field-meta.xml
<CustomField>
    <fullName>Certified_Area_ha__c</fullName>
    <label>Certified Area (ha)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>