force-app/main/default/objects/Account/fields/Client_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Tax_ID__c</fullName>
    <inlineHelpText>Enter the Client&apos;s local Tax ID if requested on the invoice doc.</inlineHelpText>
    <label>Client Tax ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>