force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>FSC</description>
    <label>Company Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>