force-app/main/default/objects/Account/fields/Complete_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Billing_Address__c</fullName>
    <formula>BillingStreet  &amp; BR() &amp;
BillingCity  &amp; &apos;, &apos; &amp; BillingState &amp; &apos;  &apos; &amp;  BillingPostalCode &amp; BR() &amp;
BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Billing Address</label>
    <type>Text</type>
</CustomField>