force-app/main/default/objects/Account/fields/Complete_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Shipping_Address__c</fullName>
    <formula>ShippingStreet &amp; IF(NOT(ISBLANK(ShippingStreet)), BR(),&apos;&apos;) &amp;
 ShippingCity  &amp; &apos;, &apos; &amp; ShippingState &amp; &apos;  &apos; &amp;  ShippingPostalCode &amp; IF(OR(NOT(ISBLANK(ShippingCity)), NOT(ISBLANK(ShippingState)), NOT(ISBLANK(ShippingPostalCode))), BR(),&apos;&apos;) &amp;
 ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Shipping Address</label>
    <type>Text</type>
</CustomField>