force-app/main/default/objects/Account/fields/Create_Sharepoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>Create_Sharepoint_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Click Save to create SharePoint Folder for the Account</inlineHelpText>
    <label>Create Sharepoint Folder</label>
    <type>Checkbox</type>
</CustomField>