force-app/main/default/objects/Account/fields/CSPK_Projected_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>CSPK_Projected_Tonnage__c</fullName>
    <label>CSPK Projected Tonnage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>