force-app/main/default/objects/Account/fields/CSPO_Projected_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>CSPO_Projected_Tonnage__c</fullName>
    <label>CSPO Projected Tonnage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>