force-app/main/default/objects/Account/fields/Desk_Audit__c.field-meta.xml
<CustomField>
    <fullName>Desk_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FSC</description>
    <label>Desk Audit</label>
    <type>Checkbox</type>
</CustomField>