force-app/main/default/objects/Account/fields/DMS_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Client_ID__c</fullName>
    <description>DMS Client ID</description>
    <externalId>true</externalId>
    <label>DMS Client ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>