force-app/main/default/objects/Account/fields/DMS_Client_Ids__c.field-meta.xml
<CustomField>
    <fullName>DMS_Client_Ids__c</fullName>
    <label>DMS Client Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>