force-app/main/default/objects/Account/fields/DMS_Notes__c.field-meta.xml
<CustomField>
    <fullName>DMS_Notes__c</fullName>
    <label>DMS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>