force-app/main/default/objects/Account/fields/DMS_Phone__c.field-meta.xml
<CustomField>
    <fullName>DMS_Phone__c</fullName>
    <label>DMS Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>