force-app/main/default/objects/Account/fields/Estates_FFB_Projected_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Estates_FFB_Projected_Tonnage__c</fullName>
    <label>Estates FFB Projected Tonnage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>