force-app/main/default/objects/Account/fields/External_Bill_to_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Bill_to_Contact_Id__c</fullName>
    <formula>Bill_to_Contact__r.External_Record_Id__c</formula>
    <label>External Bill to Contact Id</label>
    <type>Text</type>
</CustomField>