force-app/main/default/objects/Account/fields/External_Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Parent_Account_Id__c</fullName>
    <formula>Parent.External_Record_Id__c</formula>
    <label>External Parent Account Id</label>
    <type>Text</type>
</CustomField>