force-app/main/default/objects/Account/fields/fw1__Active__c.field-meta.xml
<CustomField>
    <fullName>fw1__Active__c</fullName>
    <label>zActive - OBSOLETE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>