force-app/main/default/objects/Account/fields/fw1__Total_Unused_Credits__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Unused_Credits__c</fullName>
    <label>Total Unused Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>