force-app/main/default/objects/Account/fields/fw1__UpsellOpportunity__c.field-meta.xml
<CustomField>
    <fullName>fw1__UpsellOpportunity__c</fullName>
    <label>zUpsell Opportunity - OBSOLETE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>