force-app/main/default/objects/Account/fields/Initial_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Initial_Invoice__c</fullName>
    <label>Initial Invoice %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>