force-app/main/default/objects/Account/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <formula>fw1__Entity__r.Name</formula>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>