force-app/main/default/objects/Account/fields/Local_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Company_Name__c</fullName>
    <description>FSC</description>
    <label>Local Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>