force-app/main/default/objects/Account/fields/Mill_Address__c.field-meta.xml
<CustomField>
    <fullName>Mill_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mill Address</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>