force-app/main/default/objects/Account/fields/OpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityFolderSharePointId__c</fullName>
    <label>OpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>