force-app/main/default/objects/Account/fields/OpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>OpportunityFolderSharePointURL__c</fullName>
    <label>OpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>