force-app/main/default/objects/Account/fields/Other_MSOI__c.field-meta.xml
<CustomField>
    <fullName>Other_MSOI__c</fullName>
    <label>Other MSOI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>