force-app/main/default/objects/Account/fields/Out_of_Cycle_Stakeholder_Contact__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Cycle_Stakeholder_Contact__c</fullName>
    <label>Out of Cycle Stakeholder Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>