force-app/main/default/objects/Account/fields/Ownership_Level__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Level__c</fullName>
    <label>Ownership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company-owned</fullName>
            </value>
            <value>
                <fullName>Subcontractors (third-party owned)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>