force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <defaultValue>&apos;Net 30&apos;</defaultValue>
    <inlineHelpText>If you are changing the value to Net 45 or Net 60 then make sure to click on &quot;Submit for approval&quot; from the top right corner dropdown. The value will be changed only post approval of the Accounting team.</inlineHelpText>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>