force-app/main/default/objects/Account/fields/Primary_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Manufacturer__c</fullName>
    <label>Primary Manufacturer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chips</fullName>
            </value>
            <value>
                <fullName>Logger - chips/processing</fullName>
            </value>
            <value>
                <fullName>Papermill</fullName>
            </value>
            <value>
                <fullName>Pellets</fullName>
            </value>
            <value>
                <fullName>Sawmill</fullName>
            </value>
            <value>
                <fullName>Veneer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>