force-app/main/default/objects/Account/fields/Primary_Trader__c.field-meta.xml
<CustomField>
    <fullName>Primary_Trader__c</fullName>
    <label>Primary Trader</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Desk_Audit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logger - no chipping/processing</fullName>
            </value>
            <value>
                <fullName>Paper Broker</fullName>
            </value>
            <value>
                <fullName>Print Broker (trader)</fullName>
            </value>
            <value>
                <fullName>Wood Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>