force-app/main/default/objects/Account/fields/Printing__c.field-meta.xml
<CustomField>
    <fullName>Printing__c</fullName>
    <label>Printing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print Broker (mfg)</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>