force-app/main/default/objects/Account/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand owner</fullName>
            </value>
            <value>
                <fullName>Canna (Cannabis)</fullName>
            </value>
            <value>
                <fullName>consultants/trade</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>food/ingredients</fullName>
            </value>
            <value>
                <fullName>food/packaging</fullName>
            </value>
            <value>
                <fullName>Food packaging mfg</fullName>
            </value>
            <value>
                <fullName>grower</fullName>
            </value>
            <value>
                <fullName>Grower/Pack/Ship/Dist</fullName>
            </value>
            <value>
                <fullName>Grower &amp; Handler</fullName>
            </value>
            <value>
                <fullName>Handler</fullName>
            </value>
            <value>
                <fullName>Handler (Non-Processor)</fullName>
            </value>
            <value>
                <fullName>Handler (Processor)</fullName>
            </value>
            <value>
                <fullName>Mfg/processing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>pack/dist</fullName>
            </value>
            <value>
                <fullName>Partners, Consultants, Trade Associations</fullName>
            </value>
            <value>
                <fullName>Private Label</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Wine/beer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>