force-app/main/default/objects/Account/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FSC</description>
    <label>Project</label>
    <type>Checkbox</type>
</CustomField>