force-app/main/default/objects/Account/fields/QBConsulting_ID__c.field-meta.xml
<CustomField>
    <fullName>QBConsulting_ID__c</fullName>
    <externalId>true</externalId>
    <label>QBConsulting ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>