force-app/main/default/objects/Account/fields/QBIvory_ID__c.field-meta.xml
<CustomField>
    <fullName>QBIvory_ID__c</fullName>
    <externalId>true</externalId>
    <label>QBIvory ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>