force-app/main/default/objects/Account/fields/Quickbooks_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Account_Name__c</fullName>
    <label>Quickbooks Account Name</label>
    <length>41</length>
    <type>Text</type>
</CustomField>