force-app/main/default/objects/Account/fields/Quickbooks_ID__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_ID__c</fullName>
    <label>Quickbooks ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>