force-app/main/default/objects/Account/fields/Quickbooks_Result__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Result__c</fullName>
    <label>Quickbooks Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>